--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/action_open"
         android:title="Abrir"
-        android:icon="@android:drawable/ic_menu_upload"
+        android:icon="@android:drawable/ic_menu_view"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_project_info"
